# whest-starterkit

./: EXPERIMENTS.md  README.md  estimator.py  pyproject.toml
assets/: demo.cast
docs/concepts/: scoring-model.md
docs/getting-started/: README.md  stage-1-standalone.md  stage-3-run-local.md  stage-4-run-subprocess.md  stage-5-package.md
docs/how-to/: manage-flop-budget.md  performance-tips.md  pre-submission-checklist.md  use-evaluation-datasets.md  validate-run-package.md  write-an-estimator.md
docs/reference/: cli-reference.md  code-patterns.md  estimator-contract.md  flopscope-primer.md  score-report-fields.md
docs/troubleshooting/: common-participant-errors.md  faq.md
examples/: 01_random.py  02_mean_propagation.py  03_covariance_propagation.py  04_combined.py
scripts/: compare_samplers_200.py  extract_features.py  record-demo.sh  sobol_np.py  test_bayes_shrinkage.py  test_budget_sweep.py  test_cumulant_extrapolation.py  test_deep_momentmatch.py  test_gate_stats.py  test_gc_ceiling.py  test_h1_cv.py  test_h1_momentmatch.py  test_homogeneity_radius.py  test_hybrid_momentmatch.py  test_importance_sampling.py  test_james_stein.py  test_joint_residual.py  test_lattice.py  test_lhs.py  test_linearization_cv.py  test_lowrank_cv.py  test_lowrank_tail.py  test_mlmc.py  test_oracle_subspace.py  test_qmc.py  test_quantile_match.py  test_quartic_hermite_cv.py  test_rao_blackwell.py  test_selective_freeze.py  test_subspace_qmc.py  test_telescoping_cv.py  train_corrector.py
submission/: corrector.npz  estimator.py
