[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whest-starterkit"
version = "0.1.0"
description = "Starter kit for the ARC Whitebox Estimation Challenge"
requires-python = ">=3.10"
dependencies = [
    "whestbench @ git+https://github.com/AIcrowd/whestbench.git@cdecb3b7c45aff025523834fdde345a18d95d1a5",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
